[FIX] Implement forder and naming structure in webpack-handlebars-static-file-generator.

--- a/example/index.hbs
+++ b/example/index.hbs
@@ -55,7 +55,7 @@
   <script src="./main.min.js"></script>
 </head>
 <body>
-  {{> hbs-form-handler/form-handler}}
+  {{> hbs-form-handler/form}}
   <script type="text/html" id="success">
     {{> hbs-form-handler/success}}
   </script>
