[FIX] Remove placeholders from input with HTML within labels

--- a/src/templates/partials/hbs-form-handler/form.hbs
+++ b/src/templates/partials/hbs-form-handler/form.hbs
@@ -77,11 +77,11 @@
     <label class="form__label" for="{{form.attributes.id}}-locality">{{form.content.locality.label}}</label>
   </div>
   <div class="form__field form__field--terms form__field--checkbox" {{form.attributes.error}}="{{form.content.terms.error}}">
-    <input type="checkbox" class="form__input form__input--checkbox" name="terms" id="{{form.attributes.id}}-terms" placeholder="{{form.content.terms.label}}">
+    <input type="checkbox" class="form__input form__input--checkbox" name="terms" id="{{form.attributes.id}}-terms">
     <label class="form__label" for="{{form.attributes.id}}-terms">{{{form.content.terms.label}}}</label>
   </div>
   <div class="form__field form__field--newsletter form__field--checkbox" {{form.attributes.error}}="{{form.content.newsletter.error}}">
-    <input type="checkbox" class="form__input form__input--checkbox" name="newsletter" id="{{form.attributes.id}}-newsletter" placeholder="{{form.content.newsletter.label}}">
+    <input type="checkbox" class="form__input form__input--checkbox" name="newsletter" id="{{form.attributes.id}}-newsletter">
     <label class="form__label" for="{{form.attributes.id}}-newsletter">{{{form.content.newsletter.label}}}</label>
   </div>
   <div class="form__field form__field--required">
